<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/bg_white_corner"
              android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/setting_dialog_title"
        android:textColor="@color/font_color"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_no"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginRight="12.5dp"
            android:background="@drawable/bg_gray_corner_click"
            android:gravity="center"
            android:text="@string/setting_dialog_no"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="12.5dp"
            android:background="@drawable/bg_green_corner_click"
            android:gravity="center"
            android:text="@string/setting_dialog_yes"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>