<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/bg_white_corner"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:id="@+id/network_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_oval_left"
            android:drawableRight="@drawable/ic_oval_right"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/dialog_newwork_title"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/network_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:text="@string/dialog_newwork_desc"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_gray_corner_click"
                android:gravity="center"
                android:text="@string/dialog_newwork_center"
                android:textColor="@color/white"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/btn_enter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_purple_corner_click"
                android:gravity="center"
                android:text="@string/dialog_newwork_enter"
                android:textColor="@color/white"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/btn_dismiss"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:src="@drawable/ic_dialog_delete"/>
</FrameLayout>