<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/bar_layout" />

    <TextView
        android:id="@+id/network_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#EABABA"
        android:gravity="center"
        android:text="网络不给力，请检查网络设置"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_header"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignTop="@+id/user_header"
            android:layout_marginLeft="12dp"
            android:layout_toLeftOf="@+id/user_header"
            android:layout_toStartOf="@+id/user_header"
            android:gravity="center_vertical"
            android:text="@string/edit_user_header"
            android:textColor="@color/black_alpha_60"
            android:textSize="16sp" />

        <com.appgame.differ.widget.CircleImageView
            android:id="@+id/user_header"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignTop="@+id/ic_arrow"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/ic_arrow"
            android:layout_toStartOf="@+id/ic_arrow"
            android:src="@color/default_image_color" />

        <ImageView
            android:id="@+id/ic_arrow"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_arrow_right" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="7dp"
        android:background="@color/line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="62dp">

        <TextView
            android:id="@+id/btn_upload_cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_toLeftOf="@+id/user_cover"
            android:layout_toStartOf="@+id/user_cover"
            android:gravity="center_vertical"
            android:text="封面"
            android:textColor="@color/black_alpha_60"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/user_cover"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/arrow_img"
            android:src="@color/default_image_color" />

        <ImageView
            android:id="@+id/arrow_img"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_arrow_right" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="7dp"
        android:background="@color/line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="62dp">

        <TextView
            android:id="@+id/text_username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:text="@string/edit_username"
            android:textColor="@color/black_alpha_60"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_toLeftOf="@+id/btn_delete"
            android:layout_toRightOf="@+id/text_username"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:lines="1"
            android:singleLine="true"
            android:textColor="@color/black_alpha_80"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/btn_cancel"
            android:visibility="invisible" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="62dp">

        <TextView
            android:id="@+id/text_sex"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:text="@string/edit_sex"
            android:textColor="@color/black_alpha_60"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/user_sex"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:gravity="center"

            android:textColor="@color/black_alpha_80"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="62dp">

        <TextView
            android:id="@+id/text_birthday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:text="@string/edit_birthday"
            android:textColor="@color/black_alpha_60"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/user_birthday"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:gravity="center"
            android:text="未设置"
            android:textColor="@color/black_alpha_80"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/text_privacy"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginLeft="12dp"
        android:drawableRight="@drawable/ic_arrow_right"
        android:gravity="center_vertical"
        android:text="@string/edit_privacy"
        android:textColor="@color/black_alpha_60"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <RelativeLayout
        android:id="@+id/summary_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_signature"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:gravity="center_vertical"
            android:text="@string/edit_signature"
            android:textColor="@color/black_alpha_60"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/user_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/text_signature"
            android:gravity="right"
            android:textColor="@color/black_alpha_80"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

</LinearLayout>