<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#F2F4F4F4"
              android:orientation="vertical">

    <include layout="@layout/bar_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/setting_delete_pkg"
            android:textColor="@color/black_alpha_80"
            android:textSize="16sp"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/slide_switch_pkg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/setting_pull"
            android:textColor="@color/black_alpha_80"
            android:textSize="16sp"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/slide_switch_pull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color"/>

    <TextView
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@color/white"
        android:drawableRight="@drawable/ic_arrow_right"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="邀请分享"
        android:textColor="@color/black_alpha_80"
        android:textSize="16sp"
        android:visibility="visible"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:id="@+id/curr_ver"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/black_alpha_80"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/new_ver"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="right|center_vertical"
            android:textColor="@color/black_alpha_80"
            android:textSize="16sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/btn_outlogin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/bg_green_corner_click"
        android:gravity="center"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/setting_outlogin"
        android:textColor="@color/white"
        android:textSize="18sp"/>


</LinearLayout>